test page on mobile to fix layout

--- a/src/sections/About/About.css
+++ b/src/sections/About/About.css
@@ -67,7 +67,7 @@
 }
 
 .about-background-small {
-    height: 50rem;
+    height: 53rem;
     border-bottom: 1px solid lightgray;
 }
 
