--- a/src/sections/Portfolio/Portfolio.css
+++ b/src/sections/Portfolio/Portfolio.css
@@ -7,5 +7,5 @@
 }
 
 .portfolio-bg-small {
-    height: 115rem;
+    height: 100rem;
 }
